Fix menu overlap and add default state for evennts

--- a/_sass/_menus.scss
+++ b/_sass/_menus.scss
@@ -21,6 +21,7 @@
 
 #primary_nav_wrap ul ul {
   display: none;
+  z-index: 999;
 }
 
 @media screen and (min-width: $on-medium) {
